swagger update, id 중복체크 api 구현
