# heroku/routes/user/index.js
@@ -7,6 +7,9 @@ router.route('/auth/signup').post(controller.signup);
 //signin
 router.route('/auth/signin').post(controller.signin);
 
+//중복체크
+router.route('/auth/overlap').post(controller.checkId);
+
 // //find id
 // router.route('/user/account').get(controller.findId);
 
